frontend/test/typecheck/error/nonbool-while-cond.fc
void foo(int i) {
    while (i) {}
}
